Fix for potential overflow issue in user dropdown

--- a/wcfsetup/install/files/style/dropdown.less
+++ b/wcfsetup/install/files/style/dropdown.less
@@ -514,8 +514,11 @@
 		min-width: 350px;
 		
 		> .interactiveDropdownItemsContainer {
-			overflow: hidden;
 			position: relative;
+			
+			&:not(.interactiveDropdownItemsUserMenu) {
+				overflow: hidden;
+			}
 			
 			> .interactiveDropdownItems > li:not(.loading) {
 				max-width: 400px;
